# bistable_helix

./: BistableGenIBMethod.cpp  BistableGenIBMethod.h  CMakeLists.txt  IBBistableRodForceGen.cpp  IBBistableRodForceGen.h  Makefile  README.md  generate_lag_pts_near_flag.m  generate_mesh3d.m  generate_mesh3d_no_plot.m  generate_mesh3d_sphere_motor.m  input3d  main.cpp  update_triad.cpp  update_triad.h
analysis/: compute_flux.py  compute_ke.py  core  getAdvectiveFlux.m  getAvgPitchAndRadius.m  getKE.m  getPitchAndRadius.m  getTorques.m  plotAdvectiveFlux.m  plotAvgAdvectiveFlux.m  plotAvgFluxAndTorque.m  plotAvgPitchAndRadius.m  plotEfficiency.m  plotEfficiency2.m  plotFluxDomainSize.m  plotPitchAndRadius.m  plotTorque.m  plotTorqueAndFlux.m  plotTorqueAndFluxNormalized.m  plotTorsion.m  plot_tr.py  plot_umag.py  plot_vels.py  sine_wave.m  visitlog.py
