CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0)

PROJECT(bistable_helix LANGUAGES C CXX)
FIND_PACKAGE(IBAMR REQUIRED)

SET(CXX_SRC BistableGenIBMethod.cpp IBBistableRodForceGen.cpp update_triad.cpp)

ADD_EXECUTABLE(main3d main.cpp)
TARGET_SOURCES(main3d PRIVATE ${CXX_SRC})
TARGET_LINK_LIBRARIES(main3d IBAMR::IBAMR3d)
